Disable asserts in example program.

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,6 +1,6 @@
 	include /opt/clownmdsdk/rom.mk
 
-CXXFLAGS += -O3 -Wall -Wextra -Wpedantic -std=c++23 -fvisibility=hidden -flto
+CXXFLAGS += -O3 -Wall -Wextra -Wpedantic -std=c++23 -fvisibility=hidden -flto -DNDEBUG
 LDFLAGS += -save-temps=obj
 
 all: bin/rom.bin
