--- a/stage3/src/Makefile
+++ b/stage3/src/Makefile
@@ -2,7 +2,7 @@
 
 CFLAGS += -O3 -flto -DNDEBUG -Wall -Wextra -Wpedantic -fvisibility=hidden
 
-all: ../bin/lib/libc.a ../bin/init.o
+all: ../bin/lib/libc.a ../bin/init.o ../bin/init-ip.o ../bin/init-sp.o
 
 ../bin/lib/libc.a: stdlib.c
 	mkdir -p $(@D)
