--- a/example/mega-cd/Makefile
+++ b/example/mega-cd/Makefile
@@ -3,20 +3,30 @@
 CXXFLAGS += -O3 -Wall -Wextra -Wpedantic -std=c++23 -fvisibility=hidden -flto -DNDEBUG
 LDFLAGS += -save-temps=obj
 
-all: bin/disc.iso
+all: bin/example-cd.iso bin/example-cartridge.bin
 
 bin/ip.bin: ip.cpp
 	mkdir -p $(@D)
-	$(CXX) $< -o $@ $(CXXFLAGS) $(LDFLAGS) -T $(CLOWNMDSDK_LOCATION)/ip.ld
+	$(CXX) $< -o $@ $(CXXFLAGS) -DCD $(LDFLAGS) -T $(CLOWNMDSDK_LOCATION)/ip.ld
 
 bin/sp.bin: sp.cpp
 	mkdir -p $(@D)
 	$(CXX) $< -o $@ $(CXXFLAGS) $(LDFLAGS) -T $(CLOWNMDSDK_LOCATION)/sp.ld
 
-bin/disc.o: disc.s bin/ip.bin bin/sp.bin
+bin/example-cd.o: disc.s bin/ip.bin bin/sp.bin
 	mkdir -p $(@D)
 	$(AS) $< -o $@
 
-bin/disc.iso: bin/disc.o
+bin/example-cd.iso: bin/example-cd.o
 	mkdir -p $(@D)
 	$(LD) -shared $< -o $@ --oformat=binary
+
+bin/sp.o: bin/sp.bin
+	$(INCBIN) $< $@
+
+bin/font.o: font.unc
+	$(INCBIN) $< $@
+
+bin/example-cartridge.bin: ip.cpp bin/sp.o bin/font.o
+	mkdir -p $(@D)
+	$(CXX) $< bin/sp.o bin/font.o -o $@ $(CXXFLAGS) $(LDFLAGS) -T $(CLOWNMDSDK_LOCATION)/rom.ld
