--- a/example/template-cd/Makefile
+++ b/example/template-cd/Makefile
@@ -3,7 +3,7 @@
 CXXFLAGS += -O3 -Wall -Wextra -Wpedantic -std=c++23 -fvisibility=hidden -flto -DNDEBUG
 LDFLAGS += -save-temps=obj
 
-all: bin/template-mega-cd.iso
+all: bin/template-cd.iso
 
 bin/ip.bin: ip.cpp
 	mkdir -p $(@D)
@@ -13,10 +13,10 @@ bin/sp.bin: sp.cpp
 	mkdir -p $(@D)
 	$(CXX) $< -o $@ $(CXXFLAGS) $(LDFLAGS) -T $(CLOWNMDSDK_LOCATION)/sp.ld
 
-bin/template-mega-cd.o: disc.s bin/ip.bin bin/sp.bin
+bin/template-cd.o: disc.s bin/ip.bin bin/sp.bin
 	mkdir -p $(@D)
 	$(AS) $< -o $@
 
-bin/template-mega-cd.iso: bin/template-mega-cd.o
+bin/template-cd.iso: bin/template-cd.o
 	mkdir -p $(@D)
 	$(LD) -shared $< -o $@ --oformat=binary
