Rename `cdc-test` executables.

--- a/example/cdc-test/Makefile
+++ b/example/cdc-test/Makefile
@@ -3,7 +3,7 @@
 CXXFLAGS += -O3 -Wall -Wextra -Wpedantic -std=c++23 -fvisibility=hidden -flto -DNDEBUG
 LDFLAGS += -save-temps=obj
 
-all: bin/example-cd.iso bin/example-cartridge.bin
+all: bin/cdc-test-cd.iso bin/cdc-test-cartridge.bin
 
 bin/ip.bin: ip.cpp
 	mkdir -p $(@D)
@@ -13,11 +13,11 @@ bin/sp.bin: sp.cpp
 	mkdir -p $(@D)
 	$(CXX) $< -o $@ $(CXXFLAGS) $(LDFLAGS) -T $(CLOWNMDSDK_LOCATION)/sp.ld
 
-bin/example-cd.o: disc.s bin/ip.bin bin/sp.bin
+bin/cdc-test-cd.o: disc.s bin/ip.bin bin/sp.bin
 	mkdir -p $(@D)
 	$(AS) $< -o $@
 
-bin/example-cd.iso: bin/example-cd.o
+bin/cdc-test-cd.iso: bin/cdc-test-cd.o
 	mkdir -p $(@D)
 	$(LD) -shared $< -o $@ --oformat=binary
 
@@ -27,6 +27,6 @@ bin/sp.o: bin/sp.bin
 bin/font.o: font.unc
 	$(INCBIN) $< $@
 
-bin/example-cartridge.bin: ip.cpp bin/sp.o bin/font.o
+bin/cdc-test-cartridge.bin: ip.cpp bin/sp.o bin/font.o
 	mkdir -p $(@D)
 	$(CXX) $< bin/sp.o bin/font.o -o $@ $(CXXFLAGS) $(LDFLAGS) -T $(CLOWNMDSDK_LOCATION)/rom.ld
