--- a/stage3/src/Makefile
+++ b/stage3/src/Makefile
@@ -1,8 +1,8 @@
-	include /opt/clownmdsdk/bare.mk
+	include /opt/clownmdsdk/generic.mk
 
 CFLAGS += -O3 -flto -DNDEBUG -Wall -Wextra -Wpedantic -fvisibility=hidden
 
-all: ../bin/lib/libc.a ../bin/init.o ../bin/init-ip.o ../bin/init-sp.o
+all: ../bin/lib/libc.a ../bin/init-cartridge.o ../bin/init-ip.o ../bin/init-sp.o
 
 ../bin/lib/libc.a: stdlib.c
 	mkdir -p $(@D)
