--- a/example/template-cd/Makefile
+++ b/example/template-cd/Makefile
@@ -1,4 +1,4 @@
-	include /opt/clownmdsdk/bare.mk
+	include /opt/clownmdsdk/generic.mk
 
 CXXFLAGS += -O3 -Wall -Wextra -Wpedantic -std=c++23 -fvisibility=hidden -flto -DNDEBUG
 LDFLAGS += -save-temps=obj
