--- a/stage3/src/Makefile
+++ b/stage3/src/Makefile
@@ -4,7 +4,7 @@ CFLAGS += -O3 -flto -DNDEBUG -Wall -Wextra -Wpedantic -fvisibility=hidden
 
 all: ../bin/lib/libc.a ../bin/init-cartridge.o ../bin/init-ip.o ../bin/init-sp.o
 
-../bin/lib/libc.a: stdlib.c
+../bin/lib/libc.a: string.c
 	mkdir -p $(@D)
 	$(CC) -c $< -o $@ $(CFLAGS) $(CPPFLAGS) $(LDFLAGS)
 
