Work on Tofu example some more.

--- a/example/tofu/Makefile
+++ b/example/tofu/Makefile
@@ -1,10 +1,14 @@
 	include /opt/clownmdsdk/cartridge.mk
 
-CXXFLAGS += -O3 -Wall -Wextra -Wpedantic -std=c++26 -fvisibility=hidden -flto -DNDEBUG
+CXXFLAGS += -O3 -Wall -Wextra -Wpedantic -std=c++26 -fvisibility=hidden -flto
 LDFLAGS += -save-temps=obj -Xlinker -Map=bin/output.map 
+
+ifneq ($(DEBUG), 1)
+  CXXFLAGS += -DNDEBUG
+endif
 
 all: bin/rom.bin
 
-bin/rom.bin: main.cpp controller.cpp doubly-linked-list.cpp level.cpp objects.cpp objects/base.cpp objects/player.cpp pool.cpp singly-linked-list.cpp sprite.cpp
+bin/rom.bin: main.cpp controller.cpp doubly-linked-list.cpp level.cpp objects.cpp objects/base.cpp objects/bullet.cpp objects/player.cpp pool.cpp singly-linked-list.cpp sprite.cpp
 	mkdir -p $(@D)
 	$(CXX) $^ -o $@ $(CXXFLAGS) $(LDFLAGS)
