Tofu: Compile each source file separately.
Allows partial rebuilds.

--- a/example/tofu/Makefile
+++ b/example/tofu/Makefile
@@ -7,8 +7,32 @@ ifneq ($(DEBUG), 1)
   CXXFLAGS += -DNDEBUG
 endif
 
-all: bin/rom.bin
+OBJDIR := bin
 
-bin/rom.bin: main.cpp controller.cpp doubly-linked-list.cpp level.cpp objects.cpp objects/base.cpp objects/bullet.cpp objects/player.cpp pool.cpp singly-linked-list.cpp sprite.cpp
+SOURCES := \
+	main \
+	controller \
+	doubly-linked-list \
+	level \
+	objects \
+	objects/base \
+	objects/bullet \
+	objects/player \
+	pool \
+	singly-linked-list \
+	sprite
+
+OBJECTS = $(addprefix $(OBJDIR)/, $(addsuffix .o, $(SOURCES)))
+DEPENDENCIES = $(addprefix $(OBJDIR)/, $(addsuffix .d, $(SOURCES)))
+
+all: $(OBJDIR)/rom.bin
+
+$(OBJDIR)/%.o: %.cpp
+	mkdir -p $(@D)
+	$(CXX) $^ -o $@ -c $(CXXFLAGS) -MMD -MP -MF $(OBJDIR)/$*.d
+
+$(OBJDIR)/rom.bin: $(OBJECTS)
 	mkdir -p $(@D)
 	$(CXX) $^ -o $@ $(CXXFLAGS) $(LDFLAGS)
+
+include $(wildcard $(DEPENDENCIES))
