--- a/example/cdc-test/Makefile
+++ b/example/cdc-test/Makefile
@@ -21,10 +21,6 @@ bin/cdc-test-cd.iso: bin/cdc-test-cd.o
 	mkdir -p $(@D)
 	$(LD) -shared $< -o $@ --oformat=binary
 
-bin/sp.o: bin/sp.bin
-	mkdir -p $(@D)
-	$(INCBIN) $< $@
-
-bin/cdc-test-cartridge.bin: ip.cpp cdc-test.cpp graphics-test.cpp main-menu.cpp utility.cpp bin/sp.o
+bin/cdc-test-cartridge.bin: ip.cpp cdc-test.cpp graphics-test.cpp main-menu.cpp utility.cpp
 	mkdir -p $(@D)
 	$(CXX) $^ -o $@ $(CXXFLAGS) $(LDFLAGS) -T $(CLOWNMDSDK_LOCATION)/cartridge.ld
