Switch to assembling the Z80 code with the built-in ASL.
Removes all of the platform-specify binary junk.

--- a/stage4/src/Makefile
+++ b/stage4/src/Makefile
@@ -12,3 +12,9 @@ all: ../bin/lib/libc.a ../bin/init-cartridge.o ../bin/init-ip.o ../bin/init-sp.o
 ../bin/%.o: %.s
 	mkdir -p $(@D)
 	$(AS) -c $< -o $@
+
+../bin/init-cartridge.o: ../bin/init-z80.bin
+
+../bin/init-z80.bin: init-z80.asm
+	asl -q $< -o ../bin/init-z80.p
+	p2bin -q ../bin/init-z80.p $@
