Fix `abort` not being exposed to the linker.
Also fixed junk files being installed to the system.

--- a/stage4/src/Makefile
+++ b/stage4/src/Makefile
@@ -3,18 +3,23 @@
 # TODO: Use '-flto' here once GCC fixes whatever ridiculous bug of theirs is causing `memset` to resolve to address 0.
 CFLAGS += -O3 -DNDEBUG -Wall -Wextra -Wpedantic -fvisibility=hidden
 
-all: ../bin/lib/libc.a ../bin/init-cartridge.o ../bin/init-ip.o ../bin/init-sp.o
+all: ../bin/install/lib/libc.a ../bin/install/init-cartridge.o ../bin/install/init-ip.o ../bin/install/init-sp.o
 
-../bin/lib/libc.a: string.c
+../bin/install/lib/libc.a: ../bin/stdlib.o ../bin/string.o
+	mkdir -p $(@D)
+	$(AR) rcs $@ $^
+
+../bin/%.o: %.c
 	mkdir -p $(@D)
 	$(CC) -c $< -o $@ $(CFLAGS) $(CPPFLAGS) $(LDFLAGS)
 
-../bin/%.o: %.s
+../bin/install/%.o: %.s
 	mkdir -p $(@D)
 	$(AS) -c $< -o $@
 
-../bin/init-cartridge.o: ../bin/init-z80.bin
+../bin/install/init-cartridge.o: ../bin/init-z80.bin
 
 ../bin/init-z80.bin: init-z80.asm
+	mkdir -p $(@D)
 	asl -q $< -o ../bin/init-z80.p
 	p2bin -q ../bin/init-z80.p $@
