Add V-counter tests to the CDC-test example.
Used to make ClownMDEmu more accurate.

--- a/example/cdc-test/Makefile
+++ b/example/cdc-test/Makefile
@@ -5,7 +5,7 @@ LDFLAGS += -save-temps=obj
 
 all: bin/cdc-test-cd.iso bin/cdc-test-cartridge.bin
 
-bin/ip.bin: ip.cpp cdc-test.cpp graphics-test.cpp main-menu.cpp utility.cpp
+bin/ip.bin: ip.cpp cdc-test.cpp graphics-test.cpp hv-test.cpp main-menu.cpp utility.cpp
 	mkdir -p $(@D)
 	$(CXX) $^ -o $@ $(CXXFLAGS) -DCD $(LDFLAGS) -T $(CLOWNMDSDK_LOCATION)/ip.ld
 
@@ -21,6 +21,6 @@ bin/cdc-test-cd.iso: bin/cdc-test-cd.o
 	mkdir -p $(@D)
 	$(LD) -shared $< -o $@ --oformat=binary
 
-bin/cdc-test-cartridge.bin: ip.cpp cdc-test.cpp graphics-test.cpp main-menu.cpp utility.cpp
+bin/cdc-test-cartridge.bin: ip.cpp cdc-test.cpp graphics-test.cpp hv-test.cpp main-menu.cpp utility.cpp
 	mkdir -p $(@D)
 	$(CXX) $^ -o $@ $(CXXFLAGS) $(LDFLAGS) -T $(CLOWNMDSDK_LOCATION)/cartridge.ld
